tests/golden/errors/render_ownership.kso
pub play = print "n: {at [1 2] 5}"

fn to_string none
  "MISSING"
