tests/golden/errors/render_ownership.stderr
error[ownership]: an arm of `to_string` must match on a type this module defines — rendering of primitives and sentinels is fixed; wrap the value in your own type
  --> render_ownership.kso:3:4
   3 | fn to_string none
          ^
